Optimize Vector for Space (#429)
* Use direct fields over array

* Use non-capturing lambdas

* Reduce allocations for applying with symmetry

* Make vectors immutable

* Fix location options